--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
     "export": "next export"
   },
   "dependencies": {
-    "@emotion/styled": "^11.6.0",
     "3d-react-carousal": "^4.0.2",
+    "@emotion/styled": "^11.6.0",
     "classnames": "2.3.1",
     "date-fns": "2.22.1",
     "html-react-parser": "^1.4.4",
     "next": "latest",
     "notus-nextjs": "^1.1.0",
     "react": "^17.0.2",
+    "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-multi-carousel": "^2.6.5",
