--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "export": "next export"
   },
   "dependencies": {
-    "3d-react-carousal": "^4.0.2",
     "@emotion/styled": "^11.6.0",
+    "3d-react-carousal": "^4.0.2",
     "classnames": "2.3.1",
     "date-fns": "2.22.1",
     "html-react-parser": "^1.4.4",
@@ -24,7 +24,8 @@
     "react-multi-carousel": "^2.6.5",
     "react-spring": "^9.3.3",
     "react-with-gesture": "^4.0.8",
-    "t-a-e-3d-carousel-reactjs": "^1.0.8"
+    "t-a-e-3d-carousel-reactjs": "^1.0.8",
+    "tw-elements": "^1.0.0-alpha8"
   },
   "devDependencies": {
     "autoprefixer": "10.2.6",
