--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "export": "next export"
   },
   "dependencies": {
+    "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.3.0",
+    "@mui/material": "^5.3.0",
+    "@mui/styled-engine-sc": "^5.3.0",
     "3d-react-carousal": "^4.0.2",
     "classnames": "2.3.1",
     "date-fns": "2.22.1",
@@ -24,6 +28,7 @@
     "react-multi-carousel": "^2.6.5",
     "react-spring": "^9.3.3",
     "react-with-gesture": "^4.0.8",
+    "styled-components": "^5.3.3",
     "t-a-e-3d-carousel-reactjs": "^1.0.8",
     "tw-elements": "^1.0.0-alpha8"
   },
