--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-multi-carousel": "^2.6.5",
+    "react-pdf": "^5.6.0",
     "react-spring": "^9.3.3",
     "react-with-gesture": "^4.0.8",
     "styled-components": "^5.3.3",
