--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "export": "next export"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.8",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.3.0",
@@ -18,6 +19,7 @@
     "3d-react-carousal": "^4.0.2",
     "classnames": "2.3.1",
     "date-fns": "2.22.1",
+    "graphql": "^16.3.0",
     "html-react-parser": "^1.4.4",
     "next": "latest",
     "notus-nextjs": "^1.1.0",
