--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0",
   "private": true,
   "scripts": {
-    "dev": "next",
+    "dev": "next  -p 9090",
     "build": "next build",
     "start": "next start",
     "export": "next export"
