--- a/.env.local
+++ b/.env.local
@@ -1,4 +1,4 @@
-WORDPRESS_API_URL=https://admin.acemcbohol.ph/graphql
+WORDPRESS_API_URL=http://admin.acemcbohol.ph/graphql
 
 # Only required if you want to enable preview mode
 # WORDPRESS_AUTH_REFRESH_TOKEN=
